add original rapiddisk kernel module

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,9 @@
-*~
-*.swp
-*.cmd
 *.o
-*.o.d
+.*.cmd
 *.ko
-*.ur-safe
-.cache.mk
-cscope.out
-modules.order
-Module.symvers
-/cscope.files
 *.mod.c
-.tmp_versions
+modules.order
+.cache.mk
+Module.symvers
+*.o.ur-safe
+.tmp_versions/
